// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopBar /> opens the correct sidebar when a tab button is pressed 1`] = `
<Material UI AppBar
  position="static"
>
  <div>
    Material UI Tabs with props:
    Object {
  "children": Array [
    &lt;Tab
      label="TestTab"
      value="TestTab"
    /&gt;,
  ],
  "onChange": [Function],
  "scrollButtons": "on",
  "value": false,
  "variant": "scrollable",
}
    <button
      onClick={[Function]}
    >
      Material UI Tab with props:
      Object {
  "label": "TestTab",
  "onChange": [Function],
  "value": "TestTab",
}
    </button>
  </div>
  <AsteroidSideBar
    closeCallback={[Function]}
    linkNames={
      Array [
        "TestSubtab",
        "TestSubtabTwo",
        "TestSubtab3",
        "TestSubtab-4",
      ]
    }
    open={true}
    tabName="TestTab"
  />
</Material UI AppBar>
`;

exports[`<TopBar /> renders correctly 1`] = `
<Material UI AppBar
  position="static"
>
  <div>
    Material UI Tabs with props:
    Object {
  "children": Array [
    &lt;Tab
      label="TestTab"
      value="TestTab"
    /&gt;,
  ],
  "onChange": [Function],
  "scrollButtons": "on",
  "value": false,
  "variant": "scrollable",
}
    <button
      onClick={[Function]}
    >
      Material UI Tab with props:
      Object {
  "label": "TestTab",
  "onChange": [Function],
  "value": "TestTab",
}
    </button>
  </div>
  <AsteroidSideBar
    closeCallback={[Function]}
    linkNames={Array []}
    open={false}
    tabName=""
  />
</Material UI AppBar>
`;
